import sha0 and sha1 from glatan/ghash

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,14 @@
         <td>MD5</td>
         <td><output form="hash" for="input" id="md5"></output></td>
       </tr>
+      <tr>
+        <td>SHA0</td>
+        <td><output form="hash" for="input" id="sha0"></output></td>
+      </tr>
+      <tr>
+        <td>SHA1</td>
+        <td><output form="hash" for="input" id="sha1"></output></td>
+      </tr>
     </tbody>
   </table>
   <script type="text/javascript" src="index.js"></script>
