import glatan/ghash

--- a/static/index.html
+++ b/static/index.html
@@ -23,12 +23,36 @@
         <td><output form="hash" for="input" id="md5"></output></td>
       </tr>
       <tr>
-        <td>SHA0</td>
-        <td><output form="hash" for="input" id="sha0"></output></td>
+        <td>SHA-0</td>
+        <td><output form="hash" for="input" id="sha-0"></output></td>
       </tr>
       <tr>
-        <td>SHA1</td>
-        <td><output form="hash" for="input" id="sha1"></output></td>
+        <td>SHA-1</td>
+        <td><output form="hash" for="input" id="sha-1"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-224</td>
+        <td><output form="hash" for="input" id="sha-224"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-256</td>
+        <td><output form="hash" for="input" id="sha-256"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-384</td>
+        <td><output form="hash" for="input" id="sha-384"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-512</td>
+        <td><output form="hash" for="input" id="sha-512"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-512/224</td>
+        <td><output form="hash" for="input" id="sha-512/224"></output></td>
+      </tr>
+      <tr>
+        <td>SHA-512/256</td>
+        <td><output form="hash" for="input" id="sha-512/256"></output></td>
       </tr>
     </tbody>
   </table>
