import changes from glatan/ghash
* add RIPEMD-{128, 160, 256, 320}
* add html,js changes for RIPEMD

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,22 @@
         <td><output form="hash" for="input" id="md5"></output></td>
       </tr>
       <tr>
+        <td>RIPEMD-128</td>
+        <td><output form="hash" for="input" id="ripemd-128"></output></td>
+      </tr>
+      <tr>
+        <td>RIPEMD-160</td>
+        <td><output form="hash" for="input" id="ripemd-160"></output></td>
+      </tr>
+      <tr>
+        <td>RIPEMD-256</td>
+        <td><output form="hash" for="input" id="ripemd-256"></output></td>
+      </tr>
+      <tr>
+        <td>RIPEMD-320</td>
+        <td><output form="hash" for="input" id="ripemd-320"></output></td>
+      </tr>
+      <tr>
         <td>SHA-0</td>
         <td><output form="hash" for="input" id="sha-0"></output></td>
       </tr>
