--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,22 @@
     </thead>
     <tbody>
       <tr>
+        <td>BLAKE-224</td>
+        <td><output form="hash" for="input" id="blake-224"></output></td>
+      </tr>
+      <tr>
+        <td>BLAKE-256</td>
+        <td><output form="hash" for="input" id="blake-256"></output></td>
+      </tr>
+      <tr>
+        <td>BLAKE-384</td>
+        <td><output form="hash" for="input" id="blake-384"></output></td>
+      </tr>
+      <tr>
+        <td>BLAKE-512</td>
+        <td><output form="hash" for="input" id="blake-512"></output></td>
+      </tr>
+      <tr>
         <td>MD2</td>
         <td><output form="hash" for="input" id="md2"></output></td>
       </tr>
