yewを使ったWebアプリケーションとして再設計
* textareaの更新時にハッシュ値が更新されない

* ビルドの出力ファイル名を指定(ghash.{js,wasm},index.js,index.html}
* ghashをライブラリとして利用する形にして、src/以下からghashのコードを全削除

--- a/static/index.html
+++ b/static/index.html
@@ -1,92 +1,20 @@
-<body>
-  <form id="hash" name="hash">
-    <textarea form="hash" id="input" name="input"></textarea><br>
-  </form>
-  <table>
-    <thead>
-      <tr>
-        <th>アルゴリズム</th>
-        <th>値</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>BLAKE-224</td>
-        <td><output form="hash" for="input" id="blake-224"></output></td>
-      </tr>
-      <tr>
-        <td>BLAKE-256</td>
-        <td><output form="hash" for="input" id="blake-256"></output></td>
-      </tr>
-      <tr>
-        <td>BLAKE-384</td>
-        <td><output form="hash" for="input" id="blake-384"></output></td>
-      </tr>
-      <tr>
-        <td>BLAKE-512</td>
-        <td><output form="hash" for="input" id="blake-512"></output></td>
-      </tr>
-      <tr>
-        <td>MD2</td>
-        <td><output form="hash" for="input" id="md2"></output></td>
-      </tr>
-      <tr>
-        <td>MD4</td>
-        <td><output form="hash" for="input" id="md4"></output></td>
-      </tr>
-      <tr>
-        <td>MD5</td>
-        <td><output form="hash" for="input" id="md5"></output></td>
-      </tr>
-      <tr>
-        <td>RIPEMD-128</td>
-        <td><output form="hash" for="input" id="ripemd-128"></output></td>
-      </tr>
-      <tr>
-        <td>RIPEMD-160</td>
-        <td><output form="hash" for="input" id="ripemd-160"></output></td>
-      </tr>
-      <tr>
-        <td>RIPEMD-256</td>
-        <td><output form="hash" for="input" id="ripemd-256"></output></td>
-      </tr>
-      <tr>
-        <td>RIPEMD-320</td>
-        <td><output form="hash" for="input" id="ripemd-320"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-0</td>
-        <td><output form="hash" for="input" id="sha-0"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-1</td>
-        <td><output form="hash" for="input" id="sha-1"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-224</td>
-        <td><output form="hash" for="input" id="sha-224"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-256</td>
-        <td><output form="hash" for="input" id="sha-256"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-384</td>
-        <td><output form="hash" for="input" id="sha-384"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-512</td>
-        <td><output form="hash" for="input" id="sha-512"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-512/224</td>
-        <td><output form="hash" for="input" id="sha-512/224"></output></td>
-      </tr>
-      <tr>
-        <td>SHA-512/256</td>
-        <td><output form="hash" for="input" id="sha-512/256"></output></td>
-      </tr>
-    </tbody>
-  </table>
-  <script type="text/javascript" src="index.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <title>Ghash example App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta property="og:url" content="https://ghash.glatan.now.sh">
+        <meta property="og:title" content="Ghash example App">
+        <meta property="og:description" content="Ghashの使用例">
+        <meta property="og:image" content="https://glatan.now.sh/img/og:image.png">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@import_bakery">
+        <meta name="twitter:creator" content="@import_bakery">
+        <link rel="icon" type="image/png" href="https://glatan.now.sh/img/favicon.png">
+    </head>
+    <body>
+        <script src="/index.js"></script>
+    </body>
+</html>
