--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>Ghash example App</title>
+        <title>Ghash Wasm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta property="og:url" content="https://ghash.glatan.now.sh">
-        <meta property="og:title" content="Ghash example App">
-        <meta property="og:description" content="Ghashの使用例">
+        <meta property="og:title" content="Ghash Wasm">
+        <meta property="og:description" content="Hash calculator">
         <meta property="og:image" content="https://glatan.now.sh/img/og:image.png">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@import_bakery">
