--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,14 @@
         <title>Ghash Wasm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta property="og:url" content="https://ghash.glatan.now.sh">
+        <meta property="og:url" content="https://ghash.glatan.vercel.app">
         <meta property="og:title" content="Ghash Wasm">
         <meta property="og:description" content="Hash calculator">
-        <meta property="og:image" content="https://glatan.now.sh/img/og:image.png">
+        <meta property="og:image" content="https://glatan.vercel.app/img/og:image.png">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@import_bakery">
         <meta name="twitter:creator" content="@import_bakery">
-        <link rel="icon" type="image/png" href="https://glatan.now.sh/img/favicon.png">
+        <link rel="icon" type="image/png" href="https://glatan.vercel.app/img/favicon.png">
     </head>
     <body>
         <script src="/index.js"></script>
