--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@import_bakery">
         <meta name="twitter:creator" content="@import_bakery">
-        <link rel="icon" type="image/png" href="https://glatan.vercel.app/img/favicon.png">
+        <link rel="icon" type="image/png" href="/favicon.png">
     </head>
     <body>
         <script src="/index.js"></script>
