--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
         <meta property="og:url" content="https://ghash.glatan.vercel.app">
         <meta property="og:title" content="Ghash Wasm">
         <meta property="og:description" content="Hash calculator">
-        <meta property="og:image" content="/og:image.png">
+        <meta property="og:image" content="https://ghash/glatan.vercel.app/og:image.png">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@import_bakery">
         <meta name="twitter:creator" content="@import_bakery">
