--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
         <meta property="og:url" content="https://ghash.glatan.vercel.app">
         <meta property="og:title" content="Ghash Wasm">
         <meta property="og:description" content="Hash calculator">
-        <meta data-trunk property="og:image" content="/assets/og:image.png">
+        <meta property="og:image" content="/og:image.png">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@import_bakery">
         <meta name="twitter:creator" content="@import_bakery">
         <link data-trunk rel="icon" type="image/png" href="/assets/favicon.png">
-        <link data-trunk rel="scss" href="style.scss"/>
-        <link data-trunk rel="rust" data-wasm-opt="z"/>
+        <link data-trunk rel="scss" href="style.scss" />
+        <link data-trunk rel="rust" data-wasm-opt="z" />
+        <!-- copy file for og:image -->
+        <link data-trunk rel="copy-file" href="/assets/og:image.png">
     </head>
-    <body>
-        <script src="/index.js"></script>
-    </body>
 </html>
